--- a/utils/fontconfig/conf.d/51-noto-cjk.conf
+++ b/utils/fontconfig/conf.d/51-noto-cjk.conf
@@ -2,66 +2,19 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
 
-  <!-- Default system-ui fonts -->
   <match target="pattern">
-    <test name="family">
-      <string>system-ui</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>sans-serif</string>
-    </edit>
-  </match>
-
-  <!-- Default sans-serif fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>sans-serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans CJK SC</string>
-      <string>Noto Sans</string>
-      <string>Twemoji</string>
-    </edit>
-  </match>
-
-  <!-- Default serif fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Serif CJK SC</string>
-      <string>Noto Serif</string>
-      <string>Twemoji</string>
-    </edit>
-  </match>
-
-  <!-- Default monospace fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>monospace</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>JetBrains Mono</string>
-      <string>Noto Sans Mono CJK SC</string>
-      <string>Symbols Nerd Font</string>
-      <string>Twemoji</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="prgname" compare="not_eq">
-      <string>chrome</string>
+    <test name="lang" compare="contains">
+      <string>cn</string>
     </test>
     <test name="family" compare="contains">
-      <string>Noto Sans Mono CJK</string>
+      <string>Noto Sans</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Iosevka Term</string>
+      <string>Zhudou Sans</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
 
-  
   <match target="pattern">
     <test name="lang">
       <string>zh-HK</string>
@@ -70,6 +23,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans CJK HK</string>
     </edit>
   </match>
@@ -83,6 +37,7 @@
     </test>
     <edit name="family" binding="strong">
       <!-- not have HK -->
+      <string>Zhudou Sans</string>
       <string>Noto Serif CJK TC</string>
     </edit>
   </match>
@@ -95,6 +50,7 @@
       <string>Noto Sans Mono CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans Mono CJK HK</string>
     </edit>
   </match>
@@ -107,6 +63,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans CJK TC</string>
     </edit>
   </match>
@@ -119,6 +76,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Serif CJK TC</string>
     </edit>
   </match>
@@ -131,6 +89,7 @@
       <string>Noto Sans Mono CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans Mono CJK TC</string>
     </edit>
   </match>
@@ -143,6 +102,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans CJK JP</string>
     </edit>
   </match>
@@ -155,6 +115,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Serif CJK JP</string>
     </edit>
   </match>
@@ -167,6 +128,7 @@
       <string>Noto Sans Mono CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans Mono CJK JP</string>
     </edit>
   </match>
@@ -179,6 +141,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans CJK KR</string>
     </edit>
   </match>
@@ -191,6 +154,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Serif CJK KR</string>
     </edit>
   </match>
@@ -203,40 +167,8 @@
       <string>Noto Sans Mono CJK SC</string>
     </test>
     <edit name="family" binding="strong">
+      <string>Zhudou Sans</string>
       <string>Noto Sans Mono CJK KR</string>
-    </edit>
-  </match>
-  
-  <!-- Replace monospace fonts -->
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Source Code</string>
-    </test>
-    <edit name="family" binding="strong">
-      <string>Iosevka Term</string>
-    </edit>
-  </match>
-    <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>en</string>
-    </test>
-    <test name="family" compare="contains">
-      <string>Noto Sans CJK</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>en</string>
-    </test>
-    <test name="family" compare="contains">
-      <string>Noto Serif CJK</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Serif</string>
     </edit>
   </match>
 
