--- a/fcitx5/conf/punctuation.conf
+++ b/fcitx5/conf/punctuation.conf
@@ -1,9 +1,10 @@
-# 切换键
-Hotkey=
 # 字母或者数字之后输入半角标点
 HalfWidthPuncAfterLetterOrNumber=True
 # 同时输入成对标点 (例如引号)
-TypePairedPunctuationsTogether=True
+TypePairedPunctuationsTogether=False
 # Enabled
-Enabled=False
+Enabled=True
+
+[Hotkey]
+0=Control+period
 
