--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,6 +1,12 @@
 [Settings]
+gtk-application-prefer-dark-theme=true
+gtk-button-images=true
+gtk-cursor-theme-name=WhiteSur-cursors
+gtk-cursor-theme-size=32
+gtk-decoration-layout=icon:close
+gtk-enable-animations=true
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=WhiteSur-dark
+gtk-menu-images=true
 gtk-theme-name=WhiteSur-Dark
-gtk-icon-theme-name=WhiteSur
-gtk-font-name=Sans 10
-gtk-cursor-theme-name=WhiteSur-Cursors
-gtk-cursor-theme-size=24
+gtk-toolbar-style=3
