--- a/config/sway/conf.d/bind.conf
+++ b/config/sway/conf.d/bind.conf
@@ -7,48 +7,45 @@ bindgesture swipe:3:left workspace next
 bindsym F11 fullscreen toggle
 
 # Use wev can get key name;
-floating_modifier $mod normal
+floating_modifier $MOD normal
 # Exit Sway
 bindsym Ctrl+Alt+Backspace exit
-bindsym $mod+F floating toggle
-bindsym $mod+P sticky toggle
+bindsym $MOD+F floating toggle
+bindsym $MOD+P sticky toggle
 bindsym Alt+Tab focus next
 # Kill focused window
-bindsym $mod+C kill
-bindsym $mod+Q kill
+bindsym $MOD+C kill
+bindsym $MOD+Q kill
 bindsym Alt+F4 kill
 # Reload the configuration file
-bindsym $mod+Shift+R reload
+# bindsym $MOD+Shift+R reload
 # Move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move window scratchpad
+bindsym $MOD+Shift+minus move window scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
+bindsym $MOD+minus scratchpad show
 
 # pot-app
-bindsym $mod+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
-bindsym $mod+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
-bindsym $mod+Z exec curl "127.0.0.1:60828/selection_translate"
+bindsym $MOD+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
+bindsym $MOD+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
+bindsym $MOD+Z exec curl "127.0.0.1:60828/selection_translate"
 
 bindsym Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" -e $TOP
 bindsym Ctrl+Alt+Period exec $TERMINAL --title "System Monitor" -e $TOP
-bindsym $mod+E exec $TERMINAL --title "Explore" -e $FMANAGER $HOME
-
-bindsym $mod+B exec $BROWSER
-bindsym $mod+O exec obsidian
-bindsym $mod+Shift+O exec obsidian
+bindsym $MOD+E exec $TERMINAL --title "Explore" -e $FMANAGER $HOME
 
 # Start a terminal
-bindsym $mod+T exec $TERMINAL
-bindsym $mod+Return exec $TERMINAL
-bindsym $mod+Shift+T exec $TERMINAL --title "Float Terminal"
+bindsym $MOD+T exec $TERMINAL
+bindsym $MOD+Return exec $TERMINAL
+bindsym $MOD+Shift+T exec $TERMINAL --title "Float Terminal"
 
 # Start your launcher
-bindsym $mod+R exec source ~/.config/fish/config.fish & wofi --show drun
-bindsym $mod+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
-# bindsym $mod+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+bindsym $MOD+R exec wofi --show drun
+bindsym $MOD+Shift+R exec wofi --show run
+bindsym $MOD+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
+bindsym $MOD+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
-bindsym $mod+V exec copyq toggle
+bindsym $MOD+V exec copyq toggle
 
 # Keyboard Control Function
 # @TODO: move this to a wrap function script, use wpctl and etc
@@ -65,40 +62,40 @@ bindsym --locked Print exec grim
 
 # Moving around:
 # Move your focus around
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $MOD+Left focus left
+bindsym $MOD+Down focus down
+bindsym $MOD+Up focus up
+bindsym $MOD+Right focus right
 # Ditto, with arrow keys
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $MOD+Shift+Left move left
+bindsym $MOD+Shift+Down move down
+bindsym $MOD+Shift+Up move up
+bindsym $MOD+Shift+Right move right
 
 
 ### Workspaces:
 
 # Switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
+bindsym $MOD+1 workspace number 1
+bindsym $MOD+2 workspace number 2
+bindsym $MOD+3 workspace number 3
+bindsym $MOD+4 workspace number 4
+bindsym $MOD+5 workspace number 5
+bindsym $MOD+6 workspace number 6
+bindsym $MOD+7 workspace number 7
+bindsym $MOD+8 workspace number 8
+bindsym $MOD+9 workspace number 9
+bindsym $MOD+0 workspace number 10
 # Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $MOD+Shift+1 move container to workspace number 1
+bindsym $MOD+Shift+2 move container to workspace number 2
+bindsym $MOD+Shift+3 move container to workspace number 3
+bindsym $MOD+Shift+4 move container to workspace number 4
+bindsym $MOD+Shift+5 move container to workspace number 5
+bindsym $MOD+Shift+6 move container to workspace number 6
+bindsym $MOD+Shift+7 move container to workspace number 7
+bindsym $MOD+Shift+8 move container to workspace number 8
+bindsym $MOD+Shift+9 move container to workspace number 9
+bindsym $MOD+Shift+0 move container to workspace number 10
 
 # vim: set ft=swayconfig noet:
