--- a/config/sway/conf.d/exec.conf
+++ b/config/sway/conf.d/exec.conf
@@ -1,14 +1,14 @@
-exec /usr/lib/polkit-kde-authentication-agent-1
-exec_always --no-startup-id wm-gsetting
-exec --no-startup-id wm-xdg
-exec --no-startup-id wm-idle
-exec_always {
-    xprop -root -format _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-    xrdb -merge <<< 'Xft.dpi: 192'
-    xsettingsd
-}
-exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
-exec --no-startup-id auto-start
-exec env LANG=zh_CN.UTF-8 fcitx5 -d --replace
+# autostart background applications
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+exec_always wm-gsetting
+exec wm-xdg
+exec wm-idle
+exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
+exec auto-start
+exec env LANG=zh_CN.UTF-8 fcitx5 -d --replace
+exec kanshi
+exec xprop -root -format _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+exec xrdb -merge <<< 'Xft.dpi: 192'
+exec xsettingsd
 # vim: set ft=swayconfig noet:
