--- a/config/sway/conf.d/for_window.conf
+++ b/config/sway/conf.d/for_window.conf
@@ -12,6 +12,8 @@ for_window [window_role = "dialog"] floating enable
 for_window [window_type = "dialog"] floating enable
 for_window [window_type = "menu"] floating enable
 
+# Test rules
+
 # Floating Apps
 for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
 for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
@@ -26,13 +28,17 @@ for_window [app_id="timeshift-gtk"] floating enable
 for_window [app_id="thunderbird"] floating enable
 for_window [title="^Open File$"] floating enable
 for_window [app_id="Element"] floating enable
-for_window [app_id="neovide"] floating enable
 for_window [app_id="anki"] floating enable
+
+# Neovide
+for_window [app_id="neovide"] {
+	floating enable
+  resize set 85ppt 85ppt
+}
 
 # MPV
 for_window [app_id="mpv"] {
     floating enable
-    # resize set 70ppt 70ppt
 }
 
 # JetBrains APPS
@@ -48,7 +54,7 @@ for_window [title="^(Float Terminal|System Monitor|Explore)$"] {
 }
 
 # Blender
-for_window [title="^Blender(Preferences|偏好设置)$" app_id="blender"] floating enable
+# for_window [title="^Blender(Preferences|偏好设置)$" app_id="blender"] floating enable
 
 # Goldendict
 for_window [class="GoldenDict-ng"] {
@@ -81,6 +87,7 @@ for_window [app_id="org.telegram.desktop" title="Media viewer"] {
 # Firefox
 for_window [app_id="^firefox.*$" title="^Picture-in-Picture$"] {
     floating enable
+    sticky enable
     resize set 60ppt 60ppt
 }
 for_window [app_id="^firefox.*$" title="^Library$"] floating enable
