--- a/config/sway/config
+++ b/config/sway/config
@@ -1,20 +1,19 @@
+# This is iFlygo's sway config
 include /etc/sway/config.d/*
 
 ### Variables
-set $mod Mod4
+set $MOD Mod4
 set $TERMINAL alacritty
 set $BROWSER firefox
 set $TOP htop
 set $FMANAGER yazi
 
-### Monitor
-output eDP-1 mode 2880x1800 scale 2
-output DP-1 mode 3840x2160 scale 2
-
 ### General
 # xwayland disable
 default_border none
 default_floating_border none
+
+# floating_maximum_size 0 x 0
 
 gaps inner 0
 gaps outer 0
@@ -24,4 +23,5 @@ include ~/.config/sway/conf.d/*
 bar {
 	swaybar_command waybar
 }
+
 # vim: set noet:
