--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -3,7 +3,7 @@ Vertical Candidate List=False
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="Sans Serif 11"
+Font="Sans 10"
 # 菜单字体
 MenuFont="Sans 10"
 # 托盘字体
@@ -15,21 +15,21 @@ TrayTextColor=#ffffff
 # 优先使用文字图标
 PreferTextIcon=False
 # 在图标中显示布局名称
-ShowLayoutNameInIcon=False
+ShowLayoutNameInIcon=True
 # 使用输入法的语言来显示文字
 UseInputMethodLanguageToDisplayText=True
 # 主题
-Theme=Fly
+Theme=winter
 # 深色主题
-DarkTheme=winter
+DarkTheme=default-dark
 # 跟随系统浅色/深色设置
-UseDarkTheme=True
+UseDarkTheme=False
 # 当被主题和桌面支持时使用系统的重点色
 UseAccentColor=True
 # 在 X11 上针对不同屏幕使用单独的 DPI
-PerScreenDPI=True
+PerScreenDPI=False
 # 固定 Wayland 的字体 DPI
-ForceWaylandDPI=96
+ForceWaylandDPI=0
 # 在 Wayland 下启用分数缩放
 EnableFractionalScale=False
 
