--- a/config/fcitx5/conf/pinyin.conf
+++ b/config/fcitx5/conf/pinyin.conf
@@ -16,8 +16,12 @@ ExtBEnabled=False
 CloudPinyinEnabled=True
 # 云拼音位置
 CloudPinyinIndex=2
-# 在程序中显示预编辑文本
-PreeditInApplication=True
+# 加载云拼音的时候显示动画
+CloudPinyinAnimation=True
+# 总是显示云拼音的占位符
+KeepCloudPinyinPlaceHolder=False
+# 预编辑模式
+PreeditMode="Composing pinyin"
 # 将嵌入预编辑文本的光标固定在开头
 PreeditCursorPositionAtBeginning=True
 # 在预编辑中显示完整拼音
@@ -91,11 +95,11 @@ VE_UE=False
 # 常见错误
 NG_GN=False
 # 内模糊音节 (xian -> xi'an)
-Inner=False
+Inner=True
 # 短拼音的内模糊音节 (qie -> qi'e)
 InnerShort=False
 # 匹配不完整的元音 (e -> en, eng, ei)
-PartialFinal=False
+PartialFinal=True
 # 输入长度大于 4 时进行部分双拼匹配
 PartialSp=True
 # u <-> v
