--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -44,7 +44,7 @@ TogglePreedit=
 # 默认状态为激活
 ActiveByDefault=False
 # 共享输入状态
-ShareInputState=No
+ShareInputState=Program
 # 在程序中显示预编辑文本
 PreeditEnabledByDefault=True
 # 切换输入法时显示输入法信息
