--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -1,112 +1,108 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
- <dir>~/.local/share/fonts</dir>
- <dir>~/.fonts</dir>
- <config>
-  <rescan>
-   <int>3600</int>
-  </rescan>
- </config>
- <!-- Rendering options -->
- <match target="font">
-  <!-- 修整像素大小(小于10px的调整到10px，否则四舍五入到整数) -->
-  <edit name="pixelsize">
-   <if>
-    <less>
-     <name>pixelsize</name>
-     <double>10</double>
-    </less>
-    <int>10</int>
-    <round>
-     <name>pixelsize</name>
-    </round>
-   </if>
-  </edit>
-  <edit mode="assign" name="autohint">
-   <bool>false</bool>
-  </edit>
-  <edit mode="assign" name="hinting">
-   <bool>true</bool>
-  </edit>
-  <edit mode="assign" name="hintstyle">
-   <const>hintslight</const>
-  </edit>
-  <edit mode="assign" name="antialias">
-   <bool>true</bool>
-  </edit>
-  <edit mode="assign" name="lcdfilter">
-   <const>lcddefault</const>
-  </edit>
-  <edit mode="assign" name="rgba">
-   <const>rgb</const>
-  </edit>
-  <edit mode="assign" name="embeddedbitmap">
-   <bool>false</bool>
-  </edit>
-  <edit mode="assign" name="embolden">
-   <bool>false</bool>
-  </edit>
- </match>
- <!-- Default system-ui fonts -->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>system-ui</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>sans-serif</string>
-  </edit>
- </match>
- <!-- Default sans-serif fonts-->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>sans-serif</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>Inter</string>
-   <string>OPPO Sans</string>
-   <string>Noto Sans</string>
-   <string>Symbols Nerd Font</string>
-   <string>Twemoji</string>
-   <string>Font Awesome 6 Free</string>
-   <string>Font Awesome 6 Brands</string>
-  </edit>
- </match>
- <!-- Default serif fonts-->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>serif</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>LXGW WenKai</string>
-   <string>Noto Serif</string>
-   <string>Symbols Nerd Font</string>
-   <string>Twemoji</string>
-   <string>Font Awesome 6 Free</string>
-   <string>Font Awesome 6 Brands</string>
-  </edit>
- </match>
- <!-- Default monospace fonts-->
- <match target="pattern">
-  <test name="family" qual="any">
-   <string>monospace</string>
-  </test>
-  <edit binding="strong" mode="prepend" name="family">
-   <string>JetBrains Mono</string>
-   <string>LXGW WenKai Mono</string>
-   <string>Symbols Nerd Font Mono</string>
-   <string>Twemoji</string>
-   <string>Font Awesome 6 Free</string>
-   <string>Font Awesome 6 Brands</string>
-  </edit>
- </match>
- <match target="pattern">
-  <test compare="contains" name="family">
-   <string>Twemoji</string>
-  </test>
-  <edit binding="strong" name="family">
-   <string>Twemoji mozilla</string>
-  </edit>
- </match>
-</fontconfig>
-<!-- vim: set ft=xml fdm=marker: -->
+  <dir>~/.local/share/fonts</dir>
+  <dir>~/.fonts</dir>
+  <config>
+    <rescan>
+      <int>3600</int>
+    </rescan>
+  </config>
+  <!-- Rendering options -->
+  <match target="font">
+    <!-- 修整像素大小(小于10px的调整到10px，否则四舍五入到整数) -->
+    <edit name="pixelsize">
+      <if>
+        <less>
+          <name>pixelsize</name>
+          <double>10</double>
+        </less>
+        <int>10</int>
+        <round>
+          <name>pixelsize</name>
+        </round>
+      </if>
+    </edit>
+    <edit mode="assign" name="autohint">
+      <bool>false</bool>
+    </edit>
+    <edit mode="assign" name="hinting">
+      <bool>true</bool>
+    </edit>
+    <edit mode="assign" name="hintstyle">
+      <const>hintslight</const>
+    </edit>
+    <edit mode="assign" name="antialias">
+      <bool>true</bool>
+    </edit>
+    <edit mode="assign" name="lcdfilter">
+      <const>lcddefault</const>
+    </edit>
+    <edit mode="assign" name="rgba">
+      <const>rgb</const>
+    </edit>
+    <edit mode="assign" name="embeddedbitmap">
+      <bool>false</bool>
+    </edit>
+    <edit mode="assign" name="embolden">
+      <bool>false</bool>
+    </edit>
+  </match>
+  <!-- Default system-ui fonts -->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>system-ui</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>sans-serif</string>
+    </edit>
+  </match>
+  <!-- Default sans-serif fonts-->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>sans-serif</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans</string>
+      <string>Twemoji</string>
+      <string>Font Awesome 6 Free</string>
+      <string>Font Awesome 6 Brands</string>
+    </edit>
+  </match>
+  <!-- Default serif fonts-->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>serif</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Serif</string>
+      <string>Twemoji</string>
+      <string>Font Awesome 6 Free</string>
+      <string>Font Awesome 6 Brands</string>
+    </edit>
+  </match>
+  <!-- Default monospace fonts-->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>monospace</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <!-- Nerd Font Mono 版本可能会显示较小 -->
+      <!-- https://github.com/neovide/neovide/issues/1135 -->
+      <string>Symbols Nerd Font</string>
+      <string>JetBrains Mono</string>
+      <string>Noto Sans</string>
+      <string>Twemoji</string>
+      <string>Font Awesome 6 Free</string>
+      <string>Font Awesome 6 Brands</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test compare="contains" name="family">
+      <string>Twemoji</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Twemoji Mozilla</string>
+    </edit>
+  </match>
+</fontconfig><!-- vim: set ft=xml fdm=marker: -->
