--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -1,132 +1,115 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-
-	<match target="pattern">
-		<test name="lang" compare="contains">
-			<string>cn</string>
-		</test>
-		<test name="family" compare="contains">
-			<string>Noto Sans</string>
-		</test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="lang" compare="contains">
-			<string>cn</string>
-		</test>
-		<test name="family" compare="contains">
-			<string>Noto Serif</string>
-		</test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>Noto Serif CJK SC</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="lang">
-			<string>zh-HK</string>
-		</test>
-		<test name="family">
-			<string>Noto Sans</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Sans CJK HK</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="lang">
-			<string>zh-HK</string>
-		</test>
-		<test name="family">
-			<string>Noto Serif</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Serif CJK HK</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="lang">
-			<string>zh-TW</string>
-		</test>
-		<test name="family">
-			<string>Noto Sans</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Sans CJK TC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="lang">
-			<string>zh-TW</string>
-		</test>
-		<test name="family">
-			<string>Noto Serif</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Serif CJK TC</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="lang">
-			<string>ja</string>
-		</test>
-		<test name="family">
-			<string>Noto Sans</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Sans CJK JP</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="lang">
-			<string>ja</string>
-		</test>
-		<test name="family">
-			<string>Noto Serif</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Serif CJK JP</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="lang">
-			<string>ko</string>
-		</test>
-		<test name="family">
-			<string>Noto Sans</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Sans CJK KR</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="lang">
-			<string>ko</string>
-		</test>
-		<test name="family">
-			<string>Noto Serif</string>
-		</test>
-		<edit name="family" binding="strong">
-			<string>Noto Serif CJK KR</string>
-		</edit>
-	</match>
-
-	<!-- Replace english fonts-->
-	<match target="pattern">
-		<test name="prgname" compare="not_eq">
-			<string>msedge</string>
-		</test>
-		<test name="family" compare="contains">
-			<string>Noto Sans Mono CJK</string>
-		</test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>JetBrains Mono</string>
-		</edit>
-	</match>
+  <match target="pattern">
+    <test compare="contains" name="lang">
+      <string>cn</string>
+    </test>
+    <test compare="contains" name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>OPPO Sans</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test compare="contains" name="lang">
+      <string>cn</string>
+    </test>
+    <test compare="contains" name="family">
+      <string>Noto Serif</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Serif CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-HK</string>
+    </test>
+    <test name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Sans CJK HK</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-HK</string>
+    </test>
+    <test name="family">
+      <string>Noto Serif</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Serif CJK HK</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-TW</string>
+    </test>
+    <test name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Sans CJK TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>zh-TW</string>
+    </test>
+    <test name="family">
+      <string>Noto Serif</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Serif CJK TC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>ja</string>
+    </test>
+    <test name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Sans CJK JP</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>ja</string>
+    </test>
+    <test name="family">
+      <string>Noto Serif</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Serif CJK JP</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>ko</string>
+    </test>
+    <test name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Sans CJK KR</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang">
+      <string>ko</string>
+    </test>
+    <test name="family">
+      <string>Noto Serif</string>
+    </test>
+    <edit binding="strong" name="family">
+      <string>Noto Serif CJK KR</string>
+    </edit>
+  </match>
 </fontconfig>
