--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -1,98 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-    <match target="pattern">
+  <match target="pattern">
     <test name="family">
       <string>OPPO Sans</string>
     </test>
-    <edit name="family" binding="same">
+    <edit binding="same" name="family">
       <string>OPPO Sans 4.0</string>
     </edit>
   </match>
-	<match target="pattern">
-		<test name="family">
-			<string>Simsun</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>Liberation Mono</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>DejaVu Sans Mono</string>
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>Arial</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>WenQuanYi Zen Hei</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>文泉驿正黑</string>
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>PingFang SC</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>微软雅黑</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>Microsoft YaHei</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-	<!-- alacritty -->
-	<match target="font">
-		<test compare="eq" name="prgname">
-			<string>alacritty</string>
-		</test>
-		<test compare="eq" name="family">
-			<string>Symbols Nerd Font</string>
-		</test>
-		<edit mode="assign" name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<!-- Rhyme 不显示 emoji -->
-	<!-- https://gitlab.freedesktop.org/cairo/cairo/-/issues/280 -->
-	<match target="font">
-		<test compare="contains" name="family">
-			<string>Emoji</string>
-		</test>
-		<edit mode="assign" name="hinting">
-			<bool>true</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle">
-			<const>hintslight</const>
-		</edit>
-		<edit mode="assign" name="embeddedbitmap">
-			<bool>true</bool>
-		</edit>
-	</match>
+  <match target="pattern">
+    <test name="family">
+      <string>Simsun</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>Liberation Mono</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>DejaVu Sans Mono</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>Arial</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>WenQuanYi Zen Hei</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>文泉驿正黑</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>PingFang SC</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>微软雅黑</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>Microsoft YaHei</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <!-- alacritty -->
+  <match target="font">
+    <test compare="eq" name="prgname">
+      <string>alacritty</string>
+    </test>
+    <test compare="eq" name="family">
+      <string>Symbols Nerd Font</string>
+    </test>
+    <edit mode="assign" name="antialias">
+      <bool>false</bool>
+    </edit>
+  </match>
+  <!-- Rhyme 不显示 emoji -->
+  <!-- https://gitlab.freedesktop.org/cairo/cairo/-/issues/280 -->
+  <match target="font">
+    <test compare="contains" name="family">
+      <string>Emoji</string>
+    </test>
+    <edit mode="assign" name="hinting">
+      <bool>true</bool>
+    </edit>
+    <edit mode="assign" name="hintstyle">
+      <const>hintslight</const>
+    </edit>
+    <edit mode="assign" name="embeddedbitmap">
+      <bool>true</bool>
+    </edit>
+  </match>
 </fontconfig>
