--- a/config/fontconfig/conf.d/04-web-ui.conf
+++ b/config/fontconfig/conf.d/04-web-ui.conf
@@ -1,44 +1,40 @@
-<?xml version='1.0'?>
-<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<!--
+  <!--
     https://caniuse.com/extended-system-fonts
     GitHub uses this for code blocks.
   -->
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>ui-monospace</string>
-		</test>
-		<edit name="family" mode="assign" binding="same">
-			<string>monospace</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>ui-sans-serif</string>
-		</test>
-		<edit name="family" mode="assign" binding="same">
-			<string>sans-serif</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>ui-serif</string>
-		</test>
-		<edit name="family" mode="assign" binding="same">
-			<string>serif</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>-apple-system</string>
-		</test>
-		<edit name="family" mode="assign" binding="same">
-			<string>sans-serif</string>
-		</edit>
-	</match>
-
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>ui-monospace</string>
+    </test>
+    <edit binding="same" mode="assign" name="family">
+      <string>monospace</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>ui-sans-serif</string>
+    </test>
+    <edit binding="same" mode="assign" name="family">
+      <string>sans-serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>ui-serif</string>
+    </test>
+    <edit binding="same" mode="assign" name="family">
+      <string>serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>-apple-system</string>
+    </test>
+    <edit binding="same" mode="assign" name="family">
+      <string>sans-serif</string>
+    </edit>
+  </match>
 </fontconfig>
